--- a/TODO
+++ b/TODO
@@ -1,1 +1,6 @@
-dashboard without trailing /
+
+* Add CPU/mem limits on all containers
+
+* Dashboard : without trailing /
+
+* TT-RSS : inject config.php
