Add HomeAssistant - MQTT integration

--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@
 
 * TT-RSS : inject config.php
 
-* HomeAssistant : passthrough USB
+* HomeAssistant : 
+    * passthrough USB
+    * Depends MQTT ?
 
 * Node-RED : automatically install custom nodes
