--- a/TODO
+++ b/TODO
@@ -14,3 +14,7 @@
 * RoomAssistant :
     * BLE
     * Depends MQTT ?
+
+* Add NAS mount (maybe in a PV ?)
+
+* Airsonic : configure the /music volume
