Add monitoring stack
* Prometheus and AlertManager installed using the Prometheus Operator
* Usual exporters from the contrib project Kube Prometheus
* Grafana

--- a/TODO
+++ b/TODO
@@ -14,3 +14,11 @@
 * RoomAssistant :
     * BLE
     * Depends MQTT ?
+
+* Prometheus : 
+    * Scrap Gitlab ?
+    * Scrap Grafana ?
+    * Scrap other ?
+
+* AlertManager:
+    * Notifications
