Add NGinx input for Fluent Bit

--- a/TODO
+++ b/TODO
@@ -28,7 +28,7 @@
     * MOAR dashboards
 
 * Fluent Bit :
-    * ship logs from Master: NGinx, fail2ban, ufw, ...
+    * ship logs from Master: fail2ban, ufw, ...
 
 * Kibana: 
     * Dashboards ?
