--- a/TODO
+++ b/TODO
@@ -3,6 +3,9 @@
     * Add CPU/mem limits
     * clean labels
 
+* Registry
+    * Check how to purge old images
+
 * Dashboard : without trailing /
 
 * TT-RSS : inject config.php
