--- a/TODO
+++ b/TODO
@@ -36,3 +36,7 @@
 
 (https://developer.okta.com/blog/2018/08/28/nginx-auth-request)
 (https://www.reddit.com/r/selfhosted/comments/9tzkao/sso_centralized_authentication_and_some_kind_of/)
+
+
+* Kube Bench
+    https://blog.aquasec.com/announcing-kube-bench-an-open-source-tool-for-running-kubernetes-cis-benchmark-tests
