--- a/TODO
+++ b/TODO
@@ -1,8 +1,4 @@
 
-* NGinx Ingress
-    * X-Forwarded-* headers set by the ReverseProxy seem to be overwritten by the ingress
-        Can be tested with https://infra.k8stest.com/phpldapadmin/cmd.php?cmd=login_form&server_id=1
-
 * Registry
     * Check how to purge old images
 
@@ -26,19 +22,9 @@
     * Dashboards ?
     * Alerts ?
 
-* SSO
-    * NGinx [auth_request](http://nginx.org/en/docs/http/ngx_http_auth_request_module.html)
-    * [Vouch Proxy](https://github.com/vouch/vouch-proxy)
-    * ???
-        https://github.com/keycloak/keycloak
-        https://www.gluu.org/
-        https://github.com/ory/hydra
-        https://lemonldap-ng.org/welcome/
-        https://simplesamlphp.org/docs/stable/ ??
-
-(https://developer.okta.com/blog/2018/08/28/nginx-auth-request)
-(https://www.reddit.com/r/selfhosted/comments/9tzkao/sso_centralized_authentication_and_some_kind_of/)
-
+* SSO 
+    * Add groups / roles requirements per app
+    * Add minimum security rules (2FA on infra ?)
 
 * Kube Bench
     https://blog.aquasec.com/announcing-kube-bench-an-open-source-tool-for-running-kubernetes-cis-benchmark-tests
