Implement authorization in LemonLDAP.Each domain requires an SSO_GROUP.

--- a/TODO
+++ b/TODO
@@ -23,8 +23,7 @@
     * Alerts ?
 
 * SSO 
-    * Add groups / roles requirements per app
-    * Add minimum security rules (2FA on infra ?)
+    * Optional use of TOTP ?
 
 * Kube Bench
     https://blog.aquasec.com/announcing-kube-bench-an-open-source-tool-for-running-kubernetes-cis-benchmark-tests
