Add TODO about upgrading OpenLDAP image to 1.2.4

--- a/TODO
+++ b/TODO
@@ -22,6 +22,11 @@
     * Dashboards ?
     * Alerts ?
 
+* OpenLDAP
+    * Upgrade image to 1.2.4+
+        It works at first start
+        It refuses to restart after that ...
+
 * SSO 
     * Optional use of TOTP ?
 
