--- a/TODO
+++ b/TODO
@@ -19,11 +19,16 @@
 * Grafana:
     * MOAR dashboards
 
+* Elastic
+    * Switch to OpenDistro ?
+        https://opendistro.github.io/for-elasticsearch/
+
 * Kibana: 
     * Dashboards ?
     * Alerts ?
 
 * OpenLDAP
+    * Readonly user broken ?
     * Upgrade image to 1.2.4+
         It works at first start
         It refuses to restart after that ...
