--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 
 * Registry
     * Check how to purge old images
+    * quiq/docker-registry-ui ?
 
 * HomeAssistant : 
     * passthrough USB
@@ -37,3 +38,4 @@
 
 * Email
     * Centralized SMTP Relay ?
+        * MailHog ?
