--- a/TODO
+++ b/TODO
@@ -32,3 +32,7 @@
 
 * Kube Bench
     https://blog.aquasec.com/announcing-kube-bench-an-open-source-tool-for-running-kubernetes-cis-benchmark-tests
+
+* SSL All The Things
+    * Dedicated role to generate all internal certs with a single self-signed CA
+    * Add SSL where possible, even inside the cluster
