--- a/TODO
+++ b/TODO
@@ -26,3 +26,6 @@
 
 * Kube Bench
     https://blog.aquasec.com/announcing-kube-bench-an-open-source-tool-for-running-kubernetes-cis-benchmark-tests
+
+* OpenLDAP
+    * Fails to restart
