Add all masters as LoadBalancers

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 
-* Multi-masters
+HA: 
+    * Multi-masters
+    * Certbot with multiple reverse proxies
 
 * Registry
     * Check how to purge old images
