Add TODO HomeAssistant update

--- a/TODO
+++ b/TODO
@@ -16,3 +16,6 @@
     https://github.com/reactiveops/polaris
 
 * Default 404 page on each domain
+
+* HomeAssistant
+    * https://www.home-assistant.io/blog/2019/08/28/release-98/#docker-base-image-change
