Add TODO Grafana : add group filter on login

--- a/TODO
+++ b/TODO
@@ -19,3 +19,6 @@
 
 * HomeAssistant
     * https://www.home-assistant.io/blog/2019/08/28/release-98/#docker-base-image-change
+
+* Grafana
+    * Add group filter on login
