--- a/TODO
+++ b/TODO
@@ -1,15 +1,14 @@
 
+* Home
+    * Shinobi / ZoneMinder / MotionEye ?
+    * Voice AI
+
+* VPN
+
+* NAS exporter ?
+
 * RoomAssistant :
     * BLE
 
-* Kibana:
-    * Dashboards ?
-    * Alerts ?
-
-* SSO
-    * Optional use of TOTP ?
-
-* Kube Bench
-    https://blog.aquasec.com/announcing-kube-bench-an-open-source-tool-for-running-kubernetes-cis-benchmark-tests
 
 * Default 404 page on each domain
