Add kubernetes metrics server

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 
+* Promely handle Kubelet TLS and remove `--kubelet-insecure-tls=true` in metrics-server
+
 * Home
     * Shinobi / ZoneMinder / MotionEye ?
     * Voice AI
