--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 * Use dedicated kubernetes namespaces
     * 1 per app or 1 per feature group ?
 
+* Switch CNI and implement NetworkPolicies
+
 * Configure kubernetes Liveness, Readiness and Startup Probes
     * See https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 
