--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 
 * Implement NetworkPolicies
 
+* Use ansible module k8s wait_condition when it makes sense
+
 * Configure kubernetes Liveness, Readiness and Startup Probes
     * See https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 
