Disable TTRSS and add TODO to migrate

--- a/TODO
+++ b/TODO
@@ -4,6 +4,9 @@
 
 * Configure kubernetes Liveness, Readiness and Startup Probes
     * See https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+    * https://docs.gitlab.com/ee/user/admin_area/monitoring/health_check.html
+
+* TTRSS LinuxServer image doesn't exist anymore, migratre to something else
 
 * Ansible always changed for network policies ?
 
