Implement manifest best practices for web-heimdall

--- a/TODO
+++ b/TODO
@@ -8,6 +8,13 @@
 
 * TTRSS LinuxServer image doesn't exist anymore, migratre to something else
 
+* Migrate LinuxServer images to other or custom ones
+ * Heimdall
+ * Unifi
+ * Sickchill
+ * Deluge
+ * Sabnzbd
+
 * Ansible always changed for network policies ?
 
 * Home
