Implement manifest best practices for dev-gitlab

--- a/TODO
+++ b/TODO
@@ -4,7 +4,6 @@
 
 * Configure kubernetes Liveness, Readiness and Startup Probes
     * See https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-    * https://docs.gitlab.com/ee/user/admin_area/monitoring/health_check.html
 
 * TTRSS LinuxServer image doesn't exist anymore, migratre to something else
 
@@ -15,6 +14,10 @@
  * Sabnzbd
 
 * Replace Plex by Jellyfin
+
+* Clean gitlab
+ * Disable integrated Grafana ?
+ * Deprecation logs
 
 * Ansible always changed for network policies ?
 
