--- a/TODO
+++ b/TODO
@@ -24,3 +24,13 @@
     * BLE
 
 * Default 404 page on each domain
+
+* EDMS
+  * Paperless ?
+  * Mayan EDMS ?
+  * Lodestone ? https://github.com/AnalogJ/lodestone
+
+* Backups
+  * Borg (https://www.borgbackup.org/) ?
+  * + Borgmatic ? (https://torsion.org/borgmatic/)
+  * https://github.com/danmed/TasmoBackupV1 ?
