--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 
-* Ansible always changed for network policies ?
+* Ansible always changed 
+  * for network policies
+  * for ansible\install_applications\roles\infra-kubernetes-dashboard.deploy\app\deploy\dashboard.yaml.j2 : "name: kubernetes-dashboard-csrf"
 
 * Home
     * Shinobi / ZoneMinder / MotionEye ?
