--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 
+* Jellyfin : Enable hardware acceleration
+  * https://github.com/intel/intel-device-plugins-for-kubernetes
+
 * Home
     * Shinobi / ZoneMinder / MotionEye ?
     * Voice AI
