--- a/manual_operations/k8s_1.22.6_upgrade.md
+++ b/manual_operations/k8s_1.22.6_upgrade.md
@@ -30,7 +30,7 @@ systemctl restart kubelet
 
 ## ansible
 
-Run role `kubernetes_node_preinstall` to make sure the proper kuberntes packages are held.
+Run role `kubernetes_node_preinstall` to make sure the proper kubernetes packages are held.
 
 ## cri-o
 
